RESOLVED FIXED271845
PKPaymentMethod still fails strict mode decoding when using private label cards after 273108@main
https://bugs.webkit.org/show_bug.cgi?id=271845
Summary PKPaymentMethod still fails strict mode decoding when using private label car...
Abrar Rahman Protyasha
Reported 2024-03-28 13:16:46 PDT
This time, the decode failure is for a `PKPaymentPassContent` field. ``` 2024-03-04 09:31:53.996982-0800 0x3B20E Fault 0x1270FA 4057 0 com.apple.WebKit.WebContent: (WebKit) [com.apple.WebKit:SecureCoding] NSKU decode failed for object of classes {( PKPaymentMethod )}: value for key 'content' was of unexpected class 'PKPaymentPassContent' (0x1f2039188) [/System/Library/PrivateFrameworks/PassKitCore.framework]. Allowed classes are: {( "'PKContent' (0x1f2029e18) [/System/Library/PrivateFrameworks/PassKitCore.framework]" )} ``` This is only the tip of the iceberg, though, and there are other issues such as having to rewrite arrays to NSMutableArray and not converting NSURL instances to WKSecureCodingURLWrapper when encoding.
Attachments
Abrar Rahman Protyasha
Comment 1 2024-03-28 13:16:51 PDT
Abrar Rahman Protyasha
Comment 2 2024-03-28 13:38:22 PDT
EWS
Comment 3 2024-03-29 13:12:55 PDT
Committed 276839@main (f3ac44b62cc1): <https://commits.webkit.org/276839@main> Reviewed commits have been landed. Closing PR #26572 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.